# pygenlib

./: LICENSE  pyproject.toml  readme.md
examples/: task.yaml
examples/reports/: kp_radiotorni_brute_force.tsv  kp_radiotorni_ok.tsv  vk_radiotorni_ok.tsv
examples/usage/: readme.md  script.py
examples/usage/examples/: radiotorni.i00a  radiotorni.i00b  radiotorni.o00a  radiotorni.o00b
examples/usage/testlib/: checker.cpp  gen.cpp  validator.cpp
pygenlib/: clean.py  config.py  isolate.py  report.py  testgen.py  tgyaml.py
